# falkordb-omnistrate

./: .env.example  .gitignore  .gitmodules  LICENSE  README.md  cluster.yaml  docker-compose.yaml  log.txt  node-healthcheck.sh  omnistrate-2.yaml  omnistrate.cluster.yaml  omnistrate.enterprise.byoa.yaml  omnistrate.enterprise.yaml  omnistrate.free.yaml  omnistrate.multi-zone.yaml  omnistrate.operator.yaml  omnistrate.paid.yaml  omnistrate.pro.yaml  omnistrate.single-zone.yaml  omnistrate.standalone.yaml  omnistrate.startup.yaml  omnistrate.yaml  pyproject.toml  test.py  test.sh
.github/: grype.yaml
.github/workflows/: build-release-image.yaml  build-test-image.yaml  build-test-operator-image.yaml  bump-falkordb-version.yaml  check-tls-expiry.yml  cleanup-kubeblocks-instances.yaml  cleanup-qa-instances.yaml  cleanup.yaml  delete-omnistrate-service-plan.yaml  delete-unused-free-instances.yaml  delete-unused-free-tier-instances.yaml  delete-unused-prod-instances.yaml  docker-build-redis-server-image.yaml  helm-chart-tests.yaml  redis-crash-handler.yml  retag-dev.yaml  test-deploy-instance.yaml  test-upgrade-version.yaml
.omnistrate/: config.yml
chaos/: cluster-load.test.js
cleanup/: cleanup-qa-instances-script.py  cleanup.py
compose/: kubeblocks.enterprise.yaml  kubeblocks.free.yaml  kubeblocks.pro.yaml  kubeblocks.startup.yaml  omnistrate.enterprise.byoa.yaml  omnistrate.enterprise.yaml  omnistrate.free.yaml  omnistrate.pro.yaml  omnistrate.startup.yaml
configs/: grafana.ini
docs/: grafana.md
falkordb-cluster/: Dockerfile  acl.conf  cluster-entrypoint.sh  node.conf
falkordb-cluster-rebalance/: Dockerfile
falkordb-cluster-rebalance/src/: main.py  (+2 more)
falkordb-exporter/: Dockerfile  exporter-entrypoint.sh
falkordb-node/: .env  .env.example  Dockerfile  acl.conf  node-entrypoint.sh  node.conf  sentinel-acl.conf  sentinel.conf  supervisord.conf
falkordb-node/healthcheck_rs/: Cargo.toml  Dockerfile
falkordb-node/healthcheck_rs/src/: main.rs
falkordb-replica/: Dockerfile  replica-entrypoint.sh
falkordb-sentinel/: Dockerfile  sentinel-entrypoint.sh  sentinel.conf
falkordb-slave/: Dockerfile
grafana-dashboards/: cluster-overview.json  falkordb-cloud.json  namespace-overview.json  pod-overview.json  prometheus-dashboard.json
healthcheck_rs/: Cargo.toml  Dockerfile
healthcheck_rs/src/: main.rs
omnistrate_tests/: failover_sentinel.py  failover_standalone.py  promote_pt_version.py  test.py  test_add_remove_replica.py  test_change_password.py  test_cluster.py  test_cluster_replicas.py  test_cluster_shards.py  test_cluster_zerodowntime.py  test_graph_acl.py  test_network_change.py  test_operator_cluster_replicas.py  test_operator_cluster_shards.py  test_operator_failover_cluster.py  test_operator_out_of_memory.py  test_operator_update_memory.py  test_out_of_memory.py  test_password_change.py  test_replication.py  test_replication_replicas.py  test_standalone.py  test_tls_expiration.py  test_update_memory.py  test_upgrade_version.py  utils.py
operator/: Dockerfile  READ.me  README.md  operator-example-standalone.yaml  operator-example.yaml  operatorValues.yaml  redis.redis.opstreelabs.in_redis.yaml  secret.yaml  standalone-crd.yaml  standaloneCRD.yaml  standaloneValues.yaml
scripts/: cleanup-qa-instances-script.py  data.csv  delete-unused-stopped-free-instances.sh  delete-unused-stopped-prod-instances.sh  download-debug-so.sh  fetch_upgrade_matrix.py  generate_upgrade_matrix.py  large_data.csv  medium_data.csv  oom-score-fix.sh  redis_crash_handler.py  restore_rdb.sh  restore_rdb_replication.sh  restore_rdb_standalone.sh
sentinel/: Dockerfile  sentinel-entrypoint.sh  sentinel.conf
src/oom-guard/: Cargo.toml  Dockerfile
src/oom-guard/src/: main.rs
tests/: __init__.py  conftest.py  failover.py  promote_pt_version.py  pyproject.toml  requirements.txt  suite_utils.py  test_cleanup_qa_instances_script.py  test_cluster.py  test_cluster_replicas.py  test_cluster_shards.py  test_deploy_instance.py  test_free.py  test_grouped_cluster.py  test_grouped_replication.py  test_grouped_standalone.py  test_ldap_tier_activation.py  test_multi_zone.py  test_network_change.py  test_out_of_memory.py  test_replication.py  test_replication_new.py  test_replication_replicas.py  test_single_zone.py  test_standalone.py  test_standalone_new.py  test_tls_expiration.py  test_update_memory.py  test_update_memory_new.py  test_upgrade_version.py  test_upgrade_version_new.py  test_upgrade_version_single_zone.py  test_upgrade_version_standalone.py
(+122 files in other folders)
