[tool.poetry]
name = "omnistrate_tests"
version = "0.1.0"
description = "tests for omnistrate"
authors = ["FalkorDB <info@falkordb.com>"]
package-mode = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.11.4"
falkordb = { git = "https://github.com/falkordb/falkordb-py.git", branch = "cluster" }
redis = "^5.0.7"
requests = "^2.32.3"
setuptools = "^71.1.0"
