[package]
name = "healthcheck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = { version = "0.32.3", features = ["tls-native-tls"] }
regex = "1.11.1"
rouille = "3.6.2"
openssl-sys = "0.9.109"
dns-lookup = "2.0.4"

[dependencies.openssl]
version = "0.10.73"
features = [
    "vendored"
]

r2d2 = "0.8.10"
k8s-openapi = { version = "0.20", features = ["v1_28"] }
kube = { version = "0.87", features = ["client", "derive"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"